SMILE-510 Expands handler to get records by isbn in addtion to asking by mmsid and mmsid+institution. Removes unused code.